# ville-flexible

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
tests/: conftest.py  test_api.py  test_dependencies.py  test_views.py
tests/activation/: conftest.py  test_exceptions.py  test_models.py  test_service.py  test_views.py
tests/asset/: test_models.py  test_service.py  test_views.py
ville_flexible/: __init__.py  api.py  config.py  dependencies.py  logging.py  main.py
ville_flexible/activation/: exceptions.py  models.py  service.py  views.py
ville_flexible/asset/: models.py  service.py  views.py
ville_flexible/data/: assets.json  database.py
