[project]
name = "ville-flexible"
version = "0.0.0"
authors = [
  {name = "Kevin Devin", email = "kevin.devin@outlook.fr"},
]
readme = "README.md"
dependencies = [
  "fastapi[standard]==0.129.0",
  "pydantic==2.12.5",
]
requires-python = ">= 3.12"

[project.optional-dependencies]
test = [
    "coverage==7.13.4",
    "pre-commit==2.15.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.2",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # complexity
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
